# movici-viewer

./: .bumpversion.app  .bumpversion.chart  .dockerignore  .env.production  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  VERSION  docker-compose.yml  package-lock.json  package.json  preloader.js  routes.js  server.js  sonar-project.properties  tsconfig.json  utils.js  vue.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  main.yml  pull_request.yml
chart/: Chart.yaml  values.yaml
chart/settings/: analysis_templates.json  color_rule_set.json
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
client/: .bumpversion.app  .env  .gitlab-ci.yml  Dockerfile  README.md  auto-imports.d.ts  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vue.config.js
client/k8s/: values-staging.yaml
client/src/: App.vue  deckgl.d.ts  i18n.ts  main.ts  router.ts  shims-vue.d.ts
client/src/api/: LocalBackend.ts  MockBackend.ts
client/src/components/: Main.vue  NetworkVisualization.vue  Settings.vue
client/src/composables/: useMoviciFlow.ts
client/src/locales/: en.json  nl.json
client/src/store/: index.ts  store-accessor.ts
client/src/stores/: main.ts  settings.ts
client/src/views/: DatasetEditorView.vue  FlowWrapperView.vue
client/tests/backend/: MockBackend.ts  MockDatasetService.ts  MockGeocodeService.ts  MockProjectService.ts  MockScenarioService.ts  MockSummaryService.ts  MockUpdatesService.ts  MockUserService.ts  MockViewService.ts
client/tests/unit/: placeholder.spec.js
etc/nginx/: default.conf
flow/src/: crs.ts  i18n.ts
flow/src/components/: FlowContainer.vue  FlowDatasets.vue  FlowExport.vue  FlowMain.vue  FlowProjects.vue  FlowScenario.vue  FlowVisualization.vue
flow/src/mixins/: SummaryListing.ts  ValidationProvider.ts
flow/src/store/: FlowStore.ts  FlowUserInterfaceStore.ts  GeocodeStore.ts  store-accessor.ts
flow/src/types/: api.ts  datasets.ts  flowVisualizers.ts  geocode.ts  project.ts  scenarios.ts  schema.ts  users.ts  visualization.ts
flow/src/utils/: DataExporter.ts  DatasetDownloader.ts  colorUtils.ts  csvUtils.ts  index.ts  timeline.ts
flow/src/visualizers/: VisualizerInfo.ts  VisualizerManager.ts  activeEntityVisualizers.ts  baseColorRuleSet.ts  composableVisualizers.ts  geometry.ts  index.ts  staticVisualizers.ts  tapefile.ts  tapefileVisualizers.ts  viewHelpers.ts  visualizerHelpers.ts  visualizers.ts
nginx/: nginx.conf
public/: index.html
public/static/privacy_policy/: en.html  nl.html
public/static/settings/: analysis_templates.json  color_rule_set.json  settings.json
server/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  server.py
server/app/: dependencies.py  exceptions.py  main.py  settings.py  types.py
server/app/model/: file_info.py  model.py
server/app/routers/: __init__.py  datasets.py  scenarios.py  updates.py
server/app/schemas/: dataset.py  scenario.py  summary.py  update.py
server/movici_viewer/: dependencies.py  exceptions.py  logging_config.py  main.py  monitoring.py  settings.py
server/movici_viewer/model/: file_info.py  model.py
server/movici_viewer/routers/: __init__.py  dataset_editor.py  datasets.py  scenarios.py  static.py  updates.py
server/movici_viewer/schemas/: dataset.py  scenario.py  summary.py  update.py  view.py
server/tests/: conftest.py  test_datasets.py  test_model.py  test_scenarios.py  test_updates.py  test_views.py
server/tests/data/init_data/: antennas.json  heightmap.tiff  mv_network.json  road_network.json
server/tests/data/scenarios/: no_updates_scenario.json  test_scenario.json
server/tests/data/scenarios/test_scenario/: t0_0_antennas.json  t1_0_antennas.json  t1_1_road_network.json  t2_2_road_network.json  t3_0_antennas.json
server/tests/data/views/test_scenario/: test_view.json
src/: App.vue  i18n.ts  main.ts  router.ts
src/api/: DatasetDownloader.ts  LocalBackend.ts  MockBackend.ts  client.ts  contentType.ts  timeline.ts
src/api/backend/: LocalBackend.ts
src/api/mocks/: dataset_summary.json  dataset_with_data.json  dataset_with_state.json  datasets.json  index.ts  projects.json  scenario.json  scenario_summary.json  scenarios.json  views.json
src/api/requests/: account.ts  analysis.ts  base.ts  dashboard.ts  datasetGenerator.ts  datasetSchema.ts  datasets.ts  general.ts  geocode.ts  index.ts  modelTypes.ts  organisations.ts  projects.ts  roles.ts  scenarios.ts  scopes.ts  simulations.ts  summary.ts  updates.ts  users.ts  views.ts
src/api/services/: LocalDatasetService.ts  LocalGeocodeService.ts  LocalProjectService.ts  LocalScenarioService.ts  LocalSummaryService.ts  LocalUpdatesService.ts  LocalUserService.ts  LocalViewService.ts  MockDatasetService.ts  MockGeocodeService.ts  MockProjectService.ts  MockScenarioService.ts  MockSummaryService.ts  MockUpdatesService.ts  MockUserService.ts  MockViewService.ts
src/assets/sass/: helpers.scss  main.scss  media-query.scss  variables.scss
src/backend/: LocalBackend.ts  interface.ts
src/backend/services/: LocalDatasetService.ts  LocalProjectService.ts  LocalScenarioService.ts  LocalSummaryService.ts  (+3 more)
src/components/: Console.vue  Main.vue  Settings.vue  index.ts
src/filters/: index.ts
src/flow/: crs.ts  i18n.ts  main.ts
src/locales/: en.json  index.ts  nl.json
src/store/: index.ts  requests.ts  store-accessor.ts  store.ts
src/types/: account.ts  api.ts  dashboard.ts  datasetGenerators.ts  flowVisualizers.ts  index.ts  models.ts  organisation.ts  schema.ts  users.ts
src/utils/: DataExporter.ts  colorUtils.ts  roleHelpers.ts
src/visualizers/: VisualizerInfo.ts  VisualizerManager.ts  activeEntityVisualizers.ts  composableVisualizers.ts  geometry.ts  tapefile.ts  viewHelpers.ts  visualizers.ts
tests/data/: activeProject.json  datasets.json  projects.json  scenarios.json
tests/unit/: crs.spec.ts  errors.spec.ts  helpers.ts  setupJest.js
(+350 files in other folders)
