[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "movici-viewer"
version = "1.0.1"
description = "Modern web-based visualization platform for Movici geospatial simulations"
authors = ["Pelle Koster <pelle.koster@nginfra.nl>"]
maintainers = ["NGinfra - Movici <movici@nginfra.nl>"]
license = "Movici Public License"
include = ["movici_viewer/ui/**/*"]
keywords = ["geospatial", "visualization", "simulation", "fastapi", "vue", "gis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.scripts]
movici-viewer = "movici_viewer.main:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
fastapi = "^0.117.1"
movici-simulation-core = {version = ">=2.10.6", extras = ["models"]}
numba = "0.57.1"
orjson = "^3.9.1"
pydantic = "2.0.2"
pydantic_settings = "2.0.3"
uvicorn = {extras = ["standard"], version = "^0.37.0"}

pytest = {version = "^7", optional = true}
httpx = {version = "^0.24.1", optional = true}

[tool.poetry.extras]
dev = ["httpx", "pytest"]

[tool.black]
exclude = '''(
/(
  | \.direnv
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
)
'''
include = '\.pyi?$'
line-length = 99

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["movici_viewer"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]