[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0"]

[project]
name = "movici-viewer"
version = "1.0.1"
description = "Modern web-based visualization platform for Movici geospatial simulations"
authors = [{ name = "NGinfra Movici", email = "movici@nginfra.nl" }]
maintainers = [{ name = "NGinfra Movici", email = "movici@nginfra.nl" }]
license = "Movici Public License"
keywords = [
  "geospatial",
  "visualization",
  "simulation",
  "fastapi",
  "vue",
  "gis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: Free for non-commercial use",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
  "click>=8",
  "fastapi",
  "movici-simulation-core[models]>=2.11",
  "orjson",
  "pydantic",
  "pydantic_settings",
  "uvicorn[standard]",
]
[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.poetry]
include = [{ path = "movici_viewer/ui/**/*", format = ["sdist", "wheel"] }]

[tool.poetry.scripts]
movici-viewer = "movici_viewer.main:main"

[tool.black]
exclude = '''(
/(
  | \.direnv
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
)
'''
include = '\.pyi?$'
line-length = 99

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--tb=short", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["movici_viewer"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
